--- a/Lists.css
+++ b/Lists.css
@@ -1,24 +1,24 @@
-#chalkboard {
-  position: absolute;
+/*Black background color to topnav */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
 }
 
-#chalkboard,
-#canvas,
-#output {
-  width: 768px;
-  height: 690px;
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align:center;
+  padding: 14px 1px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-@media only screen and (orientation:landscape) {
-  #chalkboard {
-    top: 0;
-    left: 127px;
-  }
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-@media only screen and (orientation:portrait) {
-  #chalkboard {
-    top: 129px;
-    left: 0;
-  }
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
 }
