--- a/about.css
+++ b/about.css
@@ -1,7 +1,32 @@
-.row {
+/*Black background color to topnav */
+.topnav {
+  background-color: #333;
+  color: black;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align:center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.blurbs {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 } 
 
-.column {
-  flex: 50%;
-}
